<?xml version="1.0" encoding="utf-8"?>
<!--Author: Eric Gilchrist-->


<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--Title Layout-->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_row="0"
        android:layout_column="0">

        <!--Title Text-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/help_title"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal"
            android:textSize="34dp" />
    </LinearLayout>

    <!--Information Layout-->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="230dp"
        android:layout_row="1"
        android:layout_column="0"
        android:weightSum="1">

        <!--Help Information Text-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/help_message"
            android:id="@+id/txtHelpMessage"
            android:layout_weight="0.85" />
    </LinearLayout>

    <!--Button Layout-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="90dp"
        android:layout_row="2"
        android:layout_column="0"
        android:weightSum="1">

        <!--Recover Drone Button-->
        <Button
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:text="Recover"
            android:id="@+id/button4"
            android:layout_weight="0.76" />

        <!--Emergency Reset Button-->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Emergency Reset"
            android:id="@+id/button5" />

        <!--Send Help Email to Team Button-->
        <Button
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:text="Email Team"
            android:id="@+id/button6"
            android:layout_weight="0.30" />
    </LinearLayout>

    <!--Software Version Layout-->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="91dp"
        android:layout_row="6"
        android:layout_column="0">
        <!--Software Version Text-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/software_version"
            android:id="@+id/txtSoftwareV"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal" />

        <!--Release Version Number-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/version"
            android:id="@+id/txtVersion"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

</GridLayout>