<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="380dp"
        android:layout_height="80dp"
        android:layout_row="0"
        android:layout_column="0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/action_settings"
            android:id="@+id/textView6"
            android:layout_gravity="center_horizontal"
            android:textSize="64dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="380dp"
        android:layout_height="80dp"
        android:layout_row="1"
        android:layout_column="0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/pitch"
            android:id="@+id/textView7"
            android:layout_gravity="center_horizontal" />

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar2" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="380dp"
        android:layout_height="80dp"
        android:layout_row="2"
        android:layout_column="0" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/yaw"
            android:id="@+id/textView8"
            android:layout_gravity="center_horizontal" />

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar3" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="380dp"
        android:layout_height="80dp"
        android:layout_row="3"
        android:layout_column="0" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/max_speed"
            android:id="@+id/textView9"
            android:layout_gravity="center_horizontal" />

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar4" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="380dp"
        android:layout_height="80dp"
        android:layout_row="4"
        android:layout_column="0" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/max_height"
            android:id="@+id/textView10"
            android:layout_gravity="center_horizontal" />

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar5" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="380dp"
        android:layout_height="80dp"
        android:layout_row="5"
        android:layout_column="0"
        android:weightSum="1">

        <Button
            android:layout_width="126dp"
            android:layout_height="match_parent"
            android:text="Return"
            android:id="@+id/button2"
            android:layout_weight="0.29" />

        <Button
            android:layout_width="126dp"
            android:layout_height="match_parent"
            android:text="Reset"
            android:id="@+id/button"
            android:layout_weight="0.29" />

        <Button
            android:layout_width="126dp"
            android:layout_height="match_parent"
            android:text="Apply"
            android:id="@+id/button3"
            android:layout_weight="0.29" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="380dp"
        android:layout_height="80dp"
        android:layout_row="6"
        android:layout_column="0">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Enable Custom Settings"
            android:id="@+id/checkBox2"
            android:layout_gravity="center_horizontal"
            android:checked="false"
            android:textSize="26dp" />
    </LinearLayout>

</GridLayout>